--- a/extensions/installer/languages/en_US/messages.po
+++ b/extensions/installer/languages/en_US/messages.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit CMS\n"
 "POT-Creation-Date: 2013-11-06 15:49+0000\n"
-"PO-Revision-Date: 2014-07-22 08:50+0000\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2014-10-24 14:46+0000\n"
+"Last-Translator: Florian <florianletsch@gmail.com>\n"
 "Language-Team: English (United States) (http://www.transifex.com/projects/p/pagekit-cms/language/en_US/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -16,114 +16,114 @@ msgstr ""
 #: extensions/installer/src/Pagekit/Installer/Controller/InstallerController.php:18
 #: extensions/installer/theme/templates/template.blade.php:5
 msgid "Pagekit Installer"
-msgstr ""
+msgstr "Pagekit Installer"
 
 #: extensions/installer/src/Pagekit/Installer/Controller/InstallerController.php:46
 msgid "Database connection failed!"
-msgstr ""
+msgstr "Database connection failed!"
 
 #: extensions/installer/src/Pagekit/Installer/Controller/InstallerController.php:66
 msgid "No database connection."
-msgstr ""
+msgstr "No database connection."
 
 #: extensions/installer/src/Pagekit/Installer/Controller/InstallerController.php:112
 msgid "Can't write config."
-msgstr ""
+msgstr "Can't write config."
 
 #: extensions/installer/src/Pagekit/Installer/Controller/InstallerController.php:125
 msgid "DB user is missing required privileges."
-msgstr ""
+msgstr "DB user is missing required privileges."
 
 #: extensions/installer/views/install.blade.php:13
 msgid "Begin"
-msgstr ""
+msgstr "Begin"
 
 #: extensions/installer/views/install.blade.php:23
 msgid "Connect database"
-msgstr ""
+msgstr "Connect database"
 
 #: extensions/installer/views/install.blade.php:25
 msgid "Enter your database connection details."
-msgstr ""
+msgstr "Enter your database connection details."
 
 #: extensions/installer/views/install.blade.php:30
 msgid "Hostname"
-msgstr ""
+msgstr "Hostname"
 
 #: extensions/installer/views/install.blade.php:33
 msgid "Host cannot be blank."
-msgstr ""
+msgstr "Host cannot be blank."
 
 #: extensions/installer/views/install.blade.php:41
 msgid "User cannot be blank."
-msgstr ""
+msgstr "User cannot be blank."
 
 #: extensions/installer/views/install.blade.php:51
 msgid "Database Name"
-msgstr ""
+msgstr "Database Name"
 
 #: extensions/installer/views/install.blade.php:54
 msgid "Database name cannot be blank."
-msgstr ""
+msgstr "Database name cannot be blank."
 
 #: extensions/installer/views/install.blade.php:59
 msgid "Table Prefix"
-msgstr ""
+msgstr "Table Prefix"
 
 #: extensions/installer/views/install.blade.php:64
 #: extensions/installer/views/install.blade.php:107
 #: extensions/installer/views/install.blade.php:140
 msgid "Next"
-msgstr ""
+msgstr "Next"
 
 #: extensions/installer/views/install.blade.php:75
 msgid "Create your account"
-msgstr ""
+msgstr "Create your account"
 
 #: extensions/installer/views/install.blade.php:77
 msgid "You will be the site administrator."
-msgstr ""
+msgstr "You will be the site administrator."
 
 #: extensions/installer/views/install.blade.php:85
 msgid "Username cannot be blank."
-msgstr ""
+msgstr "Username cannot be blank."
 
 #: extensions/installer/views/install.blade.php:93
 msgid "Field must be a valid email address."
-msgstr ""
+msgstr "Field must be a valid email address."
 
 #: extensions/installer/views/install.blade.php:102
 msgid "Password cannot be blank."
-msgstr ""
+msgstr "Password cannot be blank."
 
 #: extensions/installer/views/install.blade.php:118
 msgid "Setup your site"
-msgstr ""
+msgstr "Setup your site"
 
 #: extensions/installer/views/install.blade.php:120
 msgid "Enter your website details."
-msgstr ""
+msgstr "Enter your website details."
 
 #: extensions/installer/views/install.blade.php:128
 msgid "Site name cannot be blank."
-msgstr ""
+msgstr "Site name cannot be blank."
 
 #: extensions/installer/views/install.blade.php:152
 msgid "Installing Pagekit..."
-msgstr ""
+msgstr "Installing Pagekit..."
 
 #: extensions/installer/views/install.blade.php:160
 msgid "Installation failed!"
-msgstr ""
+msgstr "Installation failed!"
 
 #: extensions/installer/views/install.blade.php:169
 msgid "Retry"
-msgstr ""
+msgstr "Retry"
 
 #: extensions/installer/views/install.blade.php:175
 msgid "Finished!"
-msgstr ""
+msgstr "Finished!"
 
 #: extensions/installer/views/install.blade.php:182
 msgid "Login now"
-msgstr ""
+msgstr "Login now"
