--- a/extensions/blog/languages/ms_MY/messages.po
+++ b/extensions/blog/languages/ms_MY/messages.po
@@ -1,4 +1,4 @@
-# 
+#
 # Translators:
 # quebic <quebic13@live.com>, 2014
 # Rakyart <rakyart@gmail.com>, 2014
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Pagekit CMS\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
 "PO-Revision-Date: 2014-10-24 13:01+0000\n"
-"Last-Translator: Florian <florianletsch@gmail.com>\n"
+"Last-Translator: Florian <florian@yootheme.com>\n"
 "Language-Team: Malay (Malaysia) (http://www.transifex.com/projects/p/pagekit-cms/language/ms_MY/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
