--- a/extensions/blog/languages/en_US/messages.po
+++ b/extensions/blog/languages/en_US/messages.po
@@ -1,11 +1,11 @@
-# 
+#
 # Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit CMS\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
 "PO-Revision-Date: 2014-10-24 14:46+0000\n"
-"Last-Translator: Florian <florianletsch@gmail.com>\n"
+"Last-Translator: Florian <florian@yootheme.com>\n"
 "Language-Team: English (United States) (http://www.transifex.com/projects/p/pagekit-cms/language/en_US/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
