--- a/extensions/installer/languages/pl_PL/messages.po
+++ b/extensions/installer/languages/pl_PL/messages.po
@@ -1,4 +1,4 @@
-# 
+#
 # Translators:
 # Randal <andrzej@nooia.pl>, 2014
 msgid ""
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Pagekit CMS\n"
 "POT-Creation-Date: 2013-11-06 15:49+0000\n"
 "PO-Revision-Date: 2014-10-24 13:14+0000\n"
-"Last-Translator: Florian <florianletsch@gmail.com>\n"
+"Last-Translator: Florian <florian@yootheme.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/pagekit-cms/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
