--- a/extensions/installer/languages/sr_RS/messages.po
+++ b/extensions/installer/languages/sr_RS/messages.po
@@ -1,11 +1,11 @@
-# 
+#
 # Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit CMS\n"
 "POT-Creation-Date: 2013-11-06 15:49+0000\n"
 "PO-Revision-Date: 2014-10-16 14:15+0000\n"
-"Last-Translator: Florian <florianletsch@gmail.com>\n"
+"Last-Translator: Florian <florian@yootheme.com>\n"
 "Language-Team: Serbian (Serbia) (http://www.transifex.com/projects/p/pagekit-cms/language/sr_RS/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
