--- a/extensions/page/languages/uk_UA/messages.po
+++ b/extensions/page/languages/uk_UA/messages.po
@@ -1,11 +1,11 @@
-# 
+#
 # Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit CMS\n"
 "POT-Creation-Date: 2014-07-21 17:09+0000\n"
 "PO-Revision-Date: 2014-10-24 13:08+0000\n"
-"Last-Translator: Florian <florianletsch@gmail.com>\n"
+"Last-Translator: Florian <florian@yootheme.com>\n"
 "Language-Team: Ukrainian (Ukraine) (http://www.transifex.com/projects/p/pagekit-cms/language/uk_UA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
