--- a/extensions/system/languages/en_US/messages.po
+++ b/extensions/system/languages/en_US/messages.po
@@ -1,12 +1,12 @@
-# 
+#
 # Translators:
-# Florian <florianletsch@gmail.com>, 2014
+# Florian <florian@yootheme.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit CMS\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
 "PO-Revision-Date: 2014-11-04 13:19+0000\n"
-"Last-Translator: Florian <florianletsch@gmail.com>\n"
+"Last-Translator: Florian <florian@yootheme.com>\n"
 "Language-Team: English (United States) (http://www.transifex.com/projects/p/pagekit-cms/language/en_US/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
