--- a/extensions/system/languages/ja_JP/messages.po
+++ b/extensions/system/languages/ja_JP/messages.po
@@ -1,4 +1,4 @@
-# 
+#
 # Translators:
 # Fukuda Takuro <tea_hugutaku@yahoo.co.jp>, 2014
 msgid ""
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Pagekit CMS\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
 "PO-Revision-Date: 2014-10-24 13:05+0000\n"
-"Last-Translator: Florian <florianletsch@gmail.com>\n"
+"Last-Translator: Florian <florian@yootheme.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/projects/p/pagekit-cms/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
