--- a/extensions/system/languages/ru_RU/messages.po
+++ b/extensions/system/languages/ru_RU/messages.po
@@ -1,11 +1,11 @@
-# 
+#
 # Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit CMS\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
 "PO-Revision-Date: 2014-10-24 13:11+0000\n"
-"Last-Translator: Florian <florianletsch@gmail.com>\n"
+"Last-Translator: Florian <florian@yootheme.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/projects/p/pagekit-cms/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
