--- a/extensions/blog/languages/tr_TR/messages.po
+++ b/extensions/blog/languages/tr_TR/messages.po
@@ -1,13 +1,14 @@
 # 
 # Translators:
+# Kaya Zeren <kayazeren@gmail.com>, 2014
 # ozanmora <ozan.mora@gmail.com>, 2014
 # Taner YILMAZ <taner.yilmaz@live.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit CMS\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
-"PO-Revision-Date: 2014-10-16 10:39+0000\n"
-"Last-Translator: Taner YILMAZ <taner.yilmaz@live.com>\n"
+"PO-Revision-Date: 2014-11-05 16:32+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/projects/p/pagekit-cms/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,13 +35,13 @@ msgstr "Istenmeyen olarak işaretle"
 
 #: extensions/blog/views/admin/comment/index.razr:37
 msgid "No comments found."
-msgstr "Hiçbir yorum bulunamadı."
+msgstr "Henüz bir yorum yok."
 
 #: extensions/blog/views/admin/comment/index.razr:67
 #: extensions/blog/views/admin/comment/table.razr:37
 #: extensions/blog/views/comment/comment.razr:27
 msgid "Reply"
-msgstr "Cevap"
+msgstr "Yanıt"
 
 #: extensions/blog/views/admin/comment/table.razr:6
 msgid "Comment"
@@ -48,16 +49,16 @@ msgstr "Yorum"
 
 #: extensions/blog/views/admin/comment/table.razr:8
 msgid "In response to %post%"
-msgstr " %post% yazıya cevaben"
+msgstr " %post% iletisine yanıt olarak"
 
 #: extensions/blog/views/admin/comment/table.razr:8
 msgid "In response to"
-msgstr "Karşılık ver"
+msgstr "Şuna karşılık olarak"
 
 #: extensions/blog/views/admin/comment/table.razr:47
 #: extensions/blog/views/admin/post/table.razr:50
 msgid "{0} No pending|{1} One pending|]1,Inf[ %comments% pending"
-msgstr "{0} Bekleyen yok|{1} Bir tane bekleyen|]1,Inf[ %comments% bekliyor"
+msgstr "{0} Bekleyen yorum yok|{1} Bir yorum bekliyor|]1,Inf[ %comments% yorum bekliyor"
 
 #: extensions/blog/views/admin/link/blog.razr:5
 msgid "Posts View"
@@ -73,7 +74,7 @@ msgstr "- Yazı Seçin -"
 
 #: extensions/blog/views/admin/post/edit.razr:14
 msgid "Enter Title"
-msgstr "Başlık Girin"
+msgstr "Başlık Yazın"
 
 #: extensions/blog/views/admin/post/edit.razr:22
 msgid "Excerpt"
@@ -81,7 +82,7 @@ msgstr "Alıntı"
 
 #: extensions/blog/views/admin/post/edit.razr:24
 msgid "Enter Excerpt"
-msgstr "Alıntı Girin"
+msgstr "Alıntı Ekleyin"
 
 #: extensions/blog/views/admin/post/edit.razr:43
 #: extensions/blog/views/admin/post/table.razr:8
@@ -90,15 +91,15 @@ msgstr "Yazar"
 
 #: extensions/blog/views/admin/post/edit.razr:53
 msgid "Publish on"
-msgstr "Yayınla"
+msgstr "Yayınlanma"
 
 #: extensions/blog/views/admin/post/edit.razr:73
 msgid "Slug"
-msgstr "Takma Ad"
+msgstr "Kısaltma"
 
 #: extensions/blog/views/admin/post/edit.razr:96
 msgid "Enable Comments"
-msgstr "Yorumları Etkinleştir"
+msgstr "Yorumlar Kullanılsın"
 
 #: extensions/blog/views/admin/post/index.razr:8
 #: extensions/blog/src/Controller/PostController.php:105
@@ -115,7 +116,7 @@ msgstr "Yayından Kaldır"
 
 #: extensions/blog/views/admin/post/index.razr:38
 msgid "No posts found."
-msgstr "Hiçbir yazı bulunamadı."
+msgstr "Henüz bir yazı bulunamadı."
 
 #: extensions/blog/views/admin/post/table.razr:9
 #: extensions/blog/views/admin/settings.razr:16
@@ -148,7 +149,7 @@ msgstr "/blog/123"
 
 #: extensions/blog/views/admin/settings.razr:39
 msgid "/blog/sample-post"
-msgstr "/blog/örnek-yazı"
+msgstr "/blog/ornek-yazi"
 
 #: extensions/blog/views/admin/settings.razr:45
 msgid "Day and name"
@@ -156,7 +157,7 @@ msgstr "Gün ve ad"
 
 #: extensions/blog/views/admin/settings.razr:45
 msgid "/blog/2014/06/12/sample-post"
-msgstr "/blog/2014/06/12/örnek-yazı"
+msgstr "/blog/2014/06/12/ornek-yazi"
 
 #: extensions/blog/views/admin/settings.razr:51
 msgid "Month and name"
@@ -164,23 +165,23 @@ msgstr "Ay ve ad"
 
 #: extensions/blog/views/admin/settings.razr:51
 msgid "/blog/2014/06/sample-post"
-msgstr "/blog/2014/06/örnek-yazı"
+msgstr "/blog/2014/06/ornek-yazi"
 
 #: extensions/blog/views/admin/settings.razr:57
 msgid "Custom"
-msgstr "Özel"
+msgstr "İsteğe göre uyarlanmış"
 
 #: extensions/blog/views/admin/settings.razr:73
 msgid "Enable comments."
-msgstr "Yorumlara açık."
+msgstr "Yorumlar kullanılsın."
 
 #: extensions/blog/views/admin/settings.razr:77
 msgid "Require name and e-mail."
-msgstr "Ad ve e-posta zorunludur."
+msgstr "Ad ve e-posta zorunlu olsun."
 
 #: extensions/blog/views/admin/settings.razr:81
 msgid "Close comments on articles older than"
-msgstr "Bu tarihten önceki yazıları yoruma kapat:"
+msgstr "Şu tarihten önceki yazılar yoruma kapatılsın:"
 
 #: extensions/blog/views/admin/settings.razr:82
 msgid "days."
@@ -192,31 +193,31 @@ msgstr "Görünüm"
 
 #: extensions/blog/views/admin/settings.razr:91
 msgid "Show Avatars from Gravatar."
-msgstr "Gravatar profilini görüntüle"
+msgstr "Avatarlar Gravatar Üzerinden Görüntülensin"
 
 #: extensions/blog/views/admin/settings.razr:94
 msgid "Order comments by"
-msgstr "Yorumları Sırala"
+msgstr "Yorum Sıralaması"
 
 #: extensions/blog/views/admin/settings.razr:96
 msgid "latest last."
-msgstr "Son eklenen  sonda"
+msgstr "yeniden eskiye."
 
 #: extensions/blog/views/admin/settings.razr:97
 msgid "latest first."
-msgstr "Son eklenen önde"
+msgstr "eskiden yeniye."
 
 #: extensions/blog/views/admin/settings.razr:103
 msgid "Enable nested comments of"
-msgstr "İç içe yorumları etkinleştir"
+msgstr "İç içe yorumlar kullanılsın"
 
 #: extensions/blog/views/admin/settings.razr:105
 msgid "levels deep."
-msgstr "derinlik seviyesi."
+msgstr "derinlik düzeyi."
 
 #: extensions/blog/views/comment/comment.razr:13
 msgid "%date% at %time%"
-msgstr "%date% de %time%"
+msgstr "%date% - %time%"
 
 #: extensions/blog/views/comment/comments.razr:5
 msgid "Comments (%count%)"
@@ -224,15 +225,15 @@ msgstr "Yorumlar (%count%)"
 
 #: extensions/blog/views/comment/respond.razr:3
 msgid "Leave a comment"
-msgstr "Bir yorum bırak"
+msgstr "Bir yorum yapın"
 
 #: extensions/blog/views/comment/respond.razr:11
 msgid "Logged in as %name%"
-msgstr "%name% olarak giriş yapıldı"
+msgstr "%name% olarak oturum açıldı"
 
 #: extensions/blog/views/comment/respond.razr:15
 msgid "You are commenting as guest."
-msgstr "Ziyaretçi olarak yorumluyorsun."
+msgstr "Ziyaretçi olarak yorum yapıyorsunuz."
 
 #: extensions/blog/views/comment/respond.razr:33
 msgid "Submit comment"
@@ -240,11 +241,11 @@ msgstr "Yorumu gönder"
 
 #: extensions/blog/views/comment/respond.razr:45
 msgid "You are not allowed to post comments."
-msgstr "Yorum gönderebilmek için izniniz yok"
+msgstr "Yorum gönderme izniniz yok."
 
 #: extensions/blog/views/comment/respond.razr:49
 msgid "Please login to leave a comment."
-msgstr "Yorum bırakmak için lütfen giriş yapın."
+msgstr "Yorum yapmak için lütfen oturum açın."
 
 #: extensions/blog/views/post/index.razr:7
 msgid "Written by %name% on %date%"
@@ -252,7 +253,7 @@ msgstr "%date% tarihinde %name% tarafından yazılmıştır."
 
 #: extensions/blog/views/post/index.razr:18
 msgid "Continue Reading"
-msgstr "Okumaya Devam Et"
+msgstr "Devamını Okuyun"
 
 #: extensions/blog/views/post/index.razr:20
 msgid "{0} No comments|{1} %num% Comment|]1,Inf[ %num% Comments"
@@ -262,7 +263,7 @@ msgstr "{0} Yorum Yok|{1} %num% Yorum|]1,Inf[ %num% Yorum"
 msgid ""
 "You've made some changes! Leaving the post without saving will discard all "
 "changes."
-msgstr "Bazı değişiklikler yaptınız! Kaydetmeden çıkmanız durumunda tüm değişiklikler kaybolacaktır."
+msgstr "Bazı değişiklikler yaptınız! İletiyi kaydetmeden kapatırsanız tüm değişiklikler kaybolur."
 
 #: extensions/blog/src/Controller/CommentController.php:106
 msgid "Comments on %title%"
@@ -274,17 +275,17 @@ msgstr "Yorum kaydedildi."
 
 #: extensions/blog/src/Controller/CommentController.php:157
 msgid "Comment created."
-msgstr "Yorum oluşturuldu."
+msgstr "Yorum eklendi."
 
 #: extensions/blog/src/Controller/CommentController.php:177
 msgid "{0} No comment deleted.|{1} Comment deleted.|]1,Inf[ Comments deleted."
-msgstr "{0} Silinmiş yorum yok.|{1} Yorum silindi.|]1,Inf[ Yorumlar silindi."
+msgstr "{0} Hiç bir yorum silinmedi.|{1} yorum silindi.|]1,Inf[ yorum silindi."
 
 #: extensions/blog/src/Controller/CommentController.php:196
 msgid ""
 "{0} No comment status updated.|{1} Comment status updated.|]1,Inf[ Comment "
 "statuses updated."
-msgstr "{0} Durumu güncellenen yorum yok|{1} Yorum durumu güncellendi.|]1,Inf[ Yorum durumları güncellendi."
+msgstr "{0} Hiç bir yorumun durumu güncellenmedi{1} yorumun durumu güncellendi.|]1,Inf[ yorumun durumu güncellendi."
 
 #: extensions/blog/src/Controller/PostController.php:93
 msgid "Posts"
@@ -292,11 +293,11 @@ msgstr "Yazılar"
 
 #: extensions/blog/src/Controller/PostController.php:117
 msgid "Invalid post id."
-msgstr "Geçersiz yazı ID."
+msgstr "Geçersiz yazı kodu."
 
 #: extensions/blog/src/Controller/PostController.php:127
 msgid "Edit Post"
-msgstr "Yazı Düzenle"
+msgstr "Yazıyı Düzenle"
 
 #: extensions/blog/src/Controller/PostController.php:152
 msgid "Post saved."
@@ -304,24 +305,24 @@ msgstr "Yazı kaydedildi."
 
 #: extensions/blog/src/Controller/PostController.php:152
 msgid "Post created."
-msgstr "Yazı oluşturuldu."
+msgstr "Yazı eklendi."
 
 #: extensions/blog/src/Controller/PostController.php:173
 msgid "{0} No post deleted.|{1} Post deleted.|]1,Inf[ Posts deleted."
-msgstr "{0} Silinmiş yazı yok.|{1} Yazı silindi.|]1,Inf[ Yazılar silindi."
+msgstr "{0} Hiç bir yazı silinmedi.|{1} yazı silindi.|]1,Inf[ yazı silindi."
 
 #: extensions/blog/src/Controller/PostController.php:195
 msgid "{0} No post copied.|{1} Post copied.|]1,Inf[ Posts copied."
-msgstr "{0} Kopyalanan yazı yok.|{1} Yazı kopyalandı.|]1,Inf[ Yazılar kopyalandı."
+msgstr "{0} Hiç bir yazı kopyalanmadı.|{1} yazı kopyalandı.|]1,Inf[ yazı kopyalandı."
 
 #: extensions/blog/src/Controller/PostController.php:212
 msgid "{0} No post published.|{1} Post published.|]1,Inf[ Posts published."
-msgstr "{0} Yayınlanan yazı yok.|{1} Yazı yayınlandı.|]1,Inf[ Yazılar yayınlandı."
+msgstr "{0} Hiç bir yazı yayınlanmadı.|{1} yazı yayınlandı.|]1,Inf[ yazı yayınlandı."
 
 #: extensions/blog/src/Controller/PostController.php:214
 msgid ""
 "{0} No post unpublished.|{1} Post unpublished.|]1,Inf[ Posts unpublished."
-msgstr "{0} Yayınlanmamış yazı yok.|{1} Yazı yayından kaldırıldı.|]1,Inf[ Yazılar yayından kaldırıldı."
+msgstr "{0} Hiç bir yazı yayından kaldırılmadı.|{1} yazı yayından kaldırıldı.|]1,Inf[ yazı yayından kaldırıldı."
 
 #: extensions/blog/src/Controller/SiteController.php:64
 #: extensions/blog/src/Link/BlogLink.php:22
@@ -330,7 +331,7 @@ msgstr "Blog"
 
 #: extensions/blog/src/Controller/SiteController.php:93
 msgid "Please wait another %seconds% seconds before commenting again."
-msgstr "Lütfen tekrar yorum yazabilmek için %seconds% yani daha bekleyiniz."
+msgstr "Lütfen yeniden yorum yazabilmek için %seconds% saniye bekleyin."
 
 #: extensions/blog/src/Controller/SiteController.php:102
 msgid "Comments have been disabled for this post."
@@ -338,15 +339,15 @@ msgstr "Bu yazı için yorumlar devre dışı bırakıldı."
 
 #: extensions/blog/src/Controller/SiteController.php:111
 msgid "Please provide valid name and email."
-msgstr "Geçerli bir ad ve e-posta giriniz"
+msgstr "Geçerli bir ad ve e-posta yazın."
 
 #: extensions/blog/src/Controller/SiteController.php:133
 msgid "Thanks for commenting!"
-msgstr "Yorum için teşekkürler!"
+msgstr "Yorum yaptığınız için teşekkürler!"
 
 #: extensions/blog/src/Controller/SiteController.php:145
 msgid "Whoops, something went wrong!"
-msgstr "Hay aksi, bir şeyler yanlış gitti!"
+msgstr "Hay aksi, bir şeyler ters gitti!"
 
 #: extensions/blog/src/Controller/SiteController.php:158
 msgid "Post not found!"
@@ -358,11 +359,11 @@ msgstr "Bu yazıya erişilemiyor!"
 
 #: extensions/blog/src/Entity/Comment.php:114
 msgid "Approved"
-msgstr "Onaylı"
+msgstr "Onaylanmış"
 
 #: extensions/blog/src/Entity/Comment.php:115
 msgid "Pending"
-msgstr "Bekliyor"
+msgstr "Bekleyen"
 
 #: extensions/blog/src/Entity/Comment.php:116
 msgid "Spam"
@@ -370,7 +371,7 @@ msgstr "İstenmeyen"
 
 #: extensions/blog/src/Entity/Post.php:169
 msgid "Published"
-msgstr "Yayınlandı"
+msgstr "Yayınlanmış"
 
 #: extensions/blog/src/Entity/Post.php:170
 msgid "Unpublished"
@@ -382,12 +383,12 @@ msgstr "Taslak"
 
 #: extensions/blog/src/Entity/Post.php:172
 msgid "Pending Review"
-msgstr "Bekleyen İnceleme"
+msgstr "İncelenmeyi Bekliyor"
 
 #: extensions/blog/src/Event/RouteListener.php:81
 msgid "Post with id \"%id%\" not found!"
-msgstr " \"%id%\" ID li yazı bulunamadı"
+msgstr " \"%id%\" kodlu yazı bulunamadı!"
 
 #: extensions/blog/src/Event/RouteListener.php:106
 msgid "Post with slug \"%slug%\" not found!"
-msgstr "\"%slug%\"takma adlı yazı bulunamadı"
+msgstr "\"%slug%\" kısaltmalı yazı bulunamadı!"
