--- a/extensions/page/languages/tr_TR/messages.po
+++ b/extensions/page/languages/tr_TR/messages.po
@@ -1,12 +1,13 @@
 # 
 # Translators:
+# Kaya Zeren <kayazeren@gmail.com>, 2014
 # ozanmora <ozan.mora@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit CMS\n"
 "POT-Creation-Date: 2014-07-21 17:09+0000\n"
-"PO-Revision-Date: 2014-08-05 09:09+0000\n"
-"Last-Translator: ozanmora <ozan.mora@gmail.com>\n"
+"PO-Revision-Date: 2014-11-05 16:38+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/projects/p/pagekit-cms/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +26,7 @@ msgstr "- Sayfa Seçin -"
 
 #: extensions/page/views/admin/pages/edit.razr:14
 msgid "Enter Title"
-msgstr "Başlık Girin"
+msgstr "Başlık Yazın"
 
 #: extensions/page/views/admin/pages/index.razr:8
 #: extensions/page/src/Controller/PageController.php:83
@@ -42,7 +43,7 @@ msgstr "Yayından Kaldır"
 
 #: extensions/page/views/admin/pages/index.razr:38
 msgid "No pages found."
-msgstr "Sayfa bulunamadı."
+msgstr "Henüz bir sayfa yok."
 
 #: extensions/page/src/Controller/PageController.php:75
 msgid "Pages"
@@ -50,15 +51,15 @@ msgstr "Sayfalar"
 
 #: extensions/page/src/Controller/PageController.php:95
 msgid "Invalid page id."
-msgstr "Geçersiz sayfa ID."
+msgstr "Sayfa kodu geçersiz."
 
 #: extensions/page/src/Controller/PageController.php:105
 msgid "Edit Page"
-msgstr "Sayfa Düzenle"
+msgstr "Sayfayı Düzenle"
 
 #: extensions/page/src/Controller/PageController.php:120
 msgid "Page Url not available."
-msgstr "Sayfa URL mevcut değil."
+msgstr "Sayfanın İnternet adresi kullanılamıyor."
 
 #: extensions/page/src/Controller/PageController.php:127
 msgid "Page saved."
@@ -66,11 +67,11 @@ msgstr "Sayfa kaydedildi."
 
 #: extensions/page/src/Controller/PageController.php:127
 msgid "Page created."
-msgstr "Sayfa oluşturuldu."
+msgstr "Sayfa eklendi."
 
 #: extensions/page/src/Controller/PageController.php:148
 msgid "{0} No page deleted.|{1} Page deleted.|]1,Inf[ Pages deleted."
-msgstr "{0} Hiçbir sayfa silinmedi.|{1} Sayfa Silindi.|]1,Inf[ Sayfalar Silindi."
+msgstr "{0} Hiçbir sayfa silinmedi.|{1} sayfa silindi.|]1,Inf[ sayfa silindi."
 
 #: extensions/page/src/Controller/PageController.php:164
 msgid "%title% (Copy)"
@@ -78,16 +79,16 @@ msgstr "%title% (Kopya)"
 
 #: extensions/page/src/Controller/PageController.php:170
 msgid "{0} No page copied.|{1} Page copied.|]1,Inf[ Pages copied."
-msgstr "{0} Hiçbir sayfa kopyalanamadı.|{1} Sayfa kopyalandı.|]1,Inf[ Sayfalar kopyalandı."
+msgstr "{0} Hiçbir sayfa kopyalanmadı.|{1} sayfa kopyalandı.|]1,Inf[ sayfa kopyalandı."
 
 #: extensions/page/src/Controller/PageController.php:187
 msgid "{0} No page published.|{1} Page published.|]1,Inf[ Pages published."
-msgstr "{0} Hiçbir sayfa yayınlanmadı.|{1} Sayfa yayınlandı.|]1,Inf[ Sayfalar yayınlandı."
+msgstr "{0} Hiçbir sayfa yayınlanmadı.|{1} sayfa yayınlandı.|]1,Inf[ sayfa yayınlandı."
 
 #: extensions/page/src/Controller/PageController.php:189
 msgid ""
 "{0} No page unpublished.|{1} Page unpublished.|]1,Inf[ Pages unpublished."
-msgstr "{0} Hiçbir sayfa yayınlandan kaldırılmadı.|{1} Sayfa yayından kaldırıldı.|]1,Inf[ Sayfalar yayından kaldırıldı."
+msgstr "{0} Hiçbir sayfa yayından kaldırılmadı.|{1} sayfa yayından kaldırıldı.|]1,Inf[ sayfa yayından kaldırıldı."
 
 #: extensions/page/src/Controller/SiteController.php:36
 msgid "Page not found!"
@@ -95,7 +96,7 @@ msgstr "Sayfa bulunamadı!"
 
 #: extensions/page/src/Controller/SiteController.php:45
 msgid "Unable to access this page!"
-msgstr "Bu sayfaya erişemezsiniz!"
+msgstr "Bu sayfaya erişilemiyor!"
 
 #: extensions/page/src/Entity/Page.php:99
 msgid "Unpublished"
@@ -103,10 +104,10 @@ msgstr "Yayınlanmamış"
 
 #: extensions/page/src/Entity/Page.php:100
 msgid "Published"
-msgstr "Yayınlandı"
+msgstr "Yayınlanmış"
 
 #: extensions/page/src/PageExtension.php:27
 msgid ""
 "You've made some changes! Leaving the page without saving will discard all "
 "changes."
-msgstr "Bazı değişiklikler yaptınız! Kaydetmeden çıkmanız durumunda tüm değişiklikler kaybolacaktır."
+msgstr "Bazı değişiklikler yaptınız! Kaydetmeden çıkarsanız tüm değişiklikler kaybolur."
