--- a/extensions/system/languages/de_DE/messages.po
+++ b/extensions/system/languages/de_DE/messages.po
@@ -1,11 +1,12 @@
 # 
 # Translators:
+# dVoo <ankkah@web.de>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit CMS\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
-"PO-Revision-Date: 2014-08-01 13:28+0000\n"
-"Last-Translator: OliviaS <olivia@yootheme.com>\n"
+"PO-Revision-Date: 2014-11-11 09:25+0000\n"
+"Last-Translator: dVoo <ankkah@web.de>\n"
 "Language-Team: German (Germany) (http://www.transifex.com/projects/p/pagekit-cms/language/de_DE/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1997,7 +1998,7 @@ msgstr "Dienstag"
 
 #: extensions/system/src/System/Event/SystemListener.php:139
 msgid "Wednesday"
-msgstr "Mitwoch"
+msgstr "Mittwoch"
 
 #: extensions/system/src/System/Event/SystemListener.php:139
 msgid "Thursday"
